--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon  --experimental-modules --es-module-specifier-resolution=node index.js",
-    "start": "concurrently \"./index.js\" \"../client/pages/_app.tsx \""
+    "dev": "nodemon  --experimental-modules --es-module-specifier-resolution=node index.js"
   },
   "keywords": [],
   "author": "",
